--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,182 @@
-* {
-  padding: 0;
-  margin: 0;
+@charset "UTF-8";
+/*텍스트 컬러 관련 클래스 */
+.keyword_bage {
+  background-color: var(--bg-color-blue);
 }
-body {
-  overflow-x: hidden;
-}
-li,
-ol {
-  list-style: none;
-}
-img {
-  width: 100%;
-  vertical-align: top;
+.keyword_bage p {
+  color: var(--color-white);
 }
 
-.wrap {
-  width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
+.t_color {
+  color: var(--color-point);
 }
+
+#wrap {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+#inner {
+  max-width: 960px;
+  height: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.intro {
+  position: relative;
+  background-color: var(--bg-color-inter);
+  width: 100%;
+  height: 80vh;
+}
+.intro::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-image: url(/img/intro_bg.png);
+  opacity: 0.08;
+  width: 100%;
+  height: 80vh;
+}
+.intro #inner {
+  padding-top: 80px;
+}
+.intro .left_icon {
+  position: absolute;
+  left: -18px;
+  top: 0;
+  width: 100px;
+}
+.intro .intro_title {
+  color: var(--color-white);
+  position: relative;
+  z-index: 1;
+}
+.intro .intro_title span {
+  display: block;
+  margin-bottom: 8px;
+}
+.intro .intro_title span p {
+  font-size: 21px;
+  font-weight: 700;
+  letter-spacing: -1.65px;
+}
+.intro .intro_title h1 {
+  font-size: 78px;
+  line-height: 84px;
+  font-weight: 900;
+  letter-spacing: -2px;
+  text-shadow: 4px 10px 14px rgba(0, 0, 0, 0.15);
+}
+.intro .right_icon {
+  position: absolute;
+  right: 0;
+  bottom: 10px;
+  width: 120px;
+}
+.intro .scroll_event {
+  position: relative;
+  z-index: 1;
+}
+.intro .scroll_event .scroll_arrow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.intro .scroll_event .scroll_arrow span {
+  position: absolute;
+  width: 20px;
+  height: 2px;
+  opacity: 0;
+  transform: scale3d(0.5, 0.5, 0.5);
+  animation: move 3s ease-out infinite;
+}
+.intro .scroll_event .scroll_arrow span:first-child {
+  animation: move 3s ease-out 1s infinite;
+}
+.intro .scroll_event .scroll_arrow span:nth-child(2) {
+  animation: move 3s ease-out 2s infinite;
+}
+.intro .scroll_event .scroll_arrow span:before,
+.intro .scroll_event .scroll_arrow span:after {
+  content: " ";
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  background: #fff;
+}
+.intro .scroll_event .scroll_arrow span:before {
+  left: 0;
+  transform: skew(0deg, 38deg);
+}
+.intro .scroll_event .scroll_arrow span:after {
+  right: 0;
+  width: 50%;
+  transform: skew(0deg, -38deg);
+}
+@keyframes move {
+  25% {
+    opacity: 1;
+  }
+  33% {
+    opacity: 1;
+    transform: translateY(34px);
+  }
+  67% {
+    opacity: 1;
+    transform: translateY(48px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+  }
+}
+.intro .scroll_event p {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 68px;
+  font-size: 18px;
+}
+
+.contaniner {
+  background-color: #fbfbfb;
+  height: 100vh;
+  border-radius: 30px;
+  position: relative;
+  margin-top: -20vh;
+}
+.contaniner .point_list {
+  padding: 24px;
+}
+.contaniner .point_list ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 6px;
+}
+.contaniner .point_list ul li {
+  width: calc(50% - 6px);
+  background-color: var(--bg-color-white);
+  border: 1px solid var(--border-color);
+  border-radius: 12px;
+  padding: 12px;
+  color: var(--color);
+}
+.contaniner .point_list ul li span {
+  font-size: 18px;
+  font-weight: 900;
+  line-height: 24px;
+  letter-spacing: -0.25px;
+  padding: 12px;
+  display: block;
+}
+.contaniner .point_list ul li p {
+  color: var(--color-gray);
+  font-size: 14px;
+  line-height: 18px;
+} /*# sourceMappingURL=style.css.map */
