--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
   color: var(--color-white);
 }
 
+.section_title {
+  font-size: 38px;
+}
+
 .t_color {
   color: var(--color-point);
 }
@@ -100,8 +104,7 @@
 .intro .scroll_event .scroll_arrow span:nth-child(2) {
   animation: move 3s ease-out 2s infinite;
 }
-.intro .scroll_event .scroll_arrow span:before,
-.intro .scroll_event .scroll_arrow span:after {
+.intro .scroll_event .scroll_arrow span:before, .intro .scroll_event .scroll_arrow span:after {
   content: " ";
   position: absolute;
   top: 0;
@@ -140,24 +143,27 @@
   left: 50%;
   transform: translateX(-50%);
   top: 68px;
-  font-size: 18px;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .contaniner {
   background-color: #fbfbfb;
-  height: 100vh;
-  border-radius: 30px;
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
   position: relative;
   margin-top: -20vh;
 }
+.contaniner #inner {
+  max-width: 1024px;
+}
 .contaniner .point_list {
-  padding: 24px;
+  padding: 18px;
 }
 .contaniner .point_list ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 6px;
+  gap: 12px;
 }
 .contaniner .point_list ul li {
   width: calc(50% - 6px);
@@ -166,11 +172,12 @@
   border-radius: 12px;
   padding: 12px;
   color: var(--color);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.01), 0 2px 4px rgba(0, 0, 0, 0.01), 0 4px 8px rgba(0, 0, 0, 0.01), 0 8px 16px rgba(0, 0, 0, 0.01), 0 16px 32px rgba(0, 0, 0, 0.01), 0 32px 64px rgba(0, 0, 0, 0.01);
 }
 .contaniner .point_list ul li span {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 900;
-  line-height: 24px;
+  line-height: 26px;
   letter-spacing: -0.25px;
   padding: 12px;
   display: block;
@@ -178,5 +185,73 @@
 .contaniner .point_list ul li p {
   color: var(--color-gray);
   font-size: 14px;
-  line-height: 18px;
-} /*# sourceMappingURL=style.css.map */
+  line-height: 20px;
+  font-weight: 500;
+}
+.contaniner .limousine {
+  padding-top: 48px;
+}
+.contaniner .limousine .keyword_bage {
+  display: inline-block;
+  padding: 12px 18px;
+  font-size: 16px;
+  border-radius: 50px;
+  margin-bottom: 14px;
+}
+.contaniner .limousine .keyword_bage p {
+  font-weight: 500;
+  letter-spacing: -0.25px;
+}
+.contaniner .limousine .section_title {
+  display: flex;
+  -moz-column-gap: 4px;
+       column-gap: 4px;
+  justify-content: center;
+  margin-bottom: 8px;
+}
+.contaniner .limousine .section_title p {
+  letter-spacing: -1.25px;
+  font-weight: 100;
+}
+.contaniner .limousine .section_title p:last-child {
+  font-weight: 700;
+}
+.contaniner .limousine .section_desc {
+  line-height: 22px;
+}
+.contaniner .limousine .section_desc p {
+  font-size: 16px;
+}
+.contaniner .limousine .section_desc .t_color {
+  font-weight: 700;
+}
+.contaniner .limousine .section_img_box {
+  margin-top: 32px;
+  padding: 0 22px;
+}
+.contaniner .limousine .section_img_box .section_img_desc {
+  padding: 12px 0;
+}
+.contaniner .limousine .section_img_box .section_img_desc span {
+  display: block;
+  text-align: left;
+  margin-bottom: 8px;
+  letter-spacing: -0.25px;
+}
+.contaniner .limousine .section_img_box .section_img_desc span p {
+  font-size: 26px;
+  line-height: 34px;
+  font-weight: 300;
+}
+.contaniner .limousine .section_img_box .section_img_desc span p:last-child {
+  font-weight: 900;
+}
+.contaniner .limousine .section_img_box .section_img_desc span:last-child {
+  text-align: left;
+}
+.contaniner .limousine .section_img_box .section_img_desc span:last-child p {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  color: var(--color-gray);
+}/*# sourceMappingURL=style.css.map */
