--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,9 @@
     color: var(--color-white);
   }
 }
+.section_title {
+  font-size: 38px;
+}
 .t_color {
   color: var(--color-point);
 }
@@ -136,24 +139,27 @@
       left: 50%;
       transform: translateX(-50%);
       top: 68px;
-      font-size: 18px;
+      font-size: 16px;
+      font-weight: 500;
     }
   }
 }
 
 .contaniner {
   background-color: #fbfbfb;
-  height: 100vh;
-  border-radius: 30px;
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
   position: relative;
   margin-top: -20vh;
+  #inner {
+    max-width: 1024px;
+  }
   .point_list {
-    padding: 24px;
+    padding: 18px;
     ul {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
-      gap: 6px;
+      gap: 12px;
       li {
         width: calc(100% / 2 - 6px);
         background-color: var(--bg-color-white);
@@ -161,10 +167,12 @@
         border-radius: 12px;
         padding: 12px;
         color: var(--color);
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.01), 0 2px 4px rgba(0, 0, 0, 0.01), 0 4px 8px rgba(0, 0, 0, 0.01),
+          0 8px 16px rgba(0, 0, 0, 0.01), 0 16px 32px rgba(0, 0, 0, 0.01), 0 32px 64px rgba(0, 0, 0, 0.01);
         span {
-          font-size: 18px;
+          font-size: 20px;
           font-weight: 900;
-          line-height: 24px;
+          line-height: 26px;
           letter-spacing: -0.25px;
           padding: 12px;
           display: block;
@@ -172,7 +180,74 @@
         p {
           color: var(--color-gray);
           font-size: 14px;
-          line-height: 18px;
+          line-height: 20px;
+          font-weight: 500;
+        }
+      }
+    }
+  }
+  .limousine {
+    padding-top: 48px;
+    .keyword_bage {
+      display: inline-block;
+      padding: 12px 18px;
+      font-size: 16px;
+      border-radius: 50px;
+      margin-bottom: 14px;
+      p {
+        font-weight: 500;
+        letter-spacing: -0.25px;
+      }
+    }
+    .section_title {
+      display: flex;
+      column-gap: 4px;
+      justify-content: center;
+      margin-bottom: 8px;
+      p {
+        letter-spacing: -1.25px;
+        font-weight: 100;
+        &:last-child {
+          font-weight: 700;
+        }
+      }
+    }
+    .section_desc {
+      line-height: 22px;
+      p {
+        font-size: 16px;
+      }
+      .t_color {
+        font-weight: 700;
+      }
+    }
+    .section_img_box {
+      margin-top: 32px;
+      padding: 0 22px;
+      .section_img_desc {
+        padding: 12px 0;
+        span {
+          display: block;
+          text-align: left;
+          margin-bottom: 8px;
+          letter-spacing: -0.25px;
+          p {
+            font-size: 26px;
+            line-height: 34px;
+            font-weight: 300;
+            &:last-child {
+              font-weight: 900;
+            }
+          }
+          &:last-child {
+            text-align: left;
+            p {
+              font-size: 16px;
+              font-weight: 500;
+              line-height: 24px;
+              color: var(--color-gray);
+            }
+          }
         }
       }
     }
