--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@
   border-top-left-radius: 24px;
   border-top-right-radius: 24px;
   position: relative;
-  margin-top: -20vh;
+  margin-top: -18vh;
 }
 .contaniner #inner {
   max-width: 1024px;
@@ -163,14 +163,17 @@
 .contaniner .point_list ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 12px;
+  gap: 6px;
 }
 .contaniner .point_list ul li {
-  width: calc(50% - 6px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: calc(50% - 3px);
   background-color: var(--bg-color-white);
   border: 1px solid var(--border-color);
   border-radius: 12px;
-  padding: 12px;
+  padding: 32px;
   color: var(--color);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.01), 0 2px 4px rgba(0, 0, 0, 0.01), 0 4px 8px rgba(0, 0, 0, 0.01), 0 8px 16px rgba(0, 0, 0, 0.01), 0 16px 32px rgba(0, 0, 0, 0.01), 0 32px 64px rgba(0, 0, 0, 0.01);
 }
@@ -179,21 +182,24 @@
   font-weight: 900;
   line-height: 26px;
   letter-spacing: -0.25px;
-  padding: 12px;
   display: block;
+  white-space: nowrap;
 }
 .contaniner .point_list ul li p {
   color: var(--color-gray);
   font-size: 14px;
   line-height: 20px;
   font-weight: 500;
+  margin-top: 12px;
+  width: 120px;
 }
 .contaniner .limousine {
   padding-top: 48px;
 }
 .contaniner .limousine .keyword_bage {
   display: inline-block;
-  padding: 12px 18px;
+  line-height: 38px;
+  padding: 0 16px;
   font-size: 16px;
   border-radius: 50px;
   margin-bottom: 14px;
