--- a/css/common.css
+++ b/css/common.css
@@ -8,18 +8,22 @@
   --color-white: #fff;
   --color-gray: #808080;
   --color-point: #0064ff;
+  --color-table: #969696;
+  --color-warning: #e12b10;
   /*텍스트 두께*/
   --font-right: 300;
   --font-medium: 500;
   --font-bold: 700;
   /*라인 컬러*/
-  --border-color: #e5e5e5;
+  --border-color: #e3e6eb;
   /*배경컬러*/
+  --bg-color-default: #1f1f1f;
   --bg-color-inter: #244373;
   --bg-color-blue: #0064ff;
-  --bg-color-grey: #6b717b;
+  --bg-color-gray: #6b717b;
   --bg-color-navy: #2a4063;
   --bg-color-white: #fff;
+  --bg-color-table-gray: #fafafa;
 }
 
 /*초기 셋팅 import*/
@@ -31,9 +35,7 @@
 
 body {
   overflow-x: hidden;
-  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue",
-    "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol", sans-serif;
+  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
   color: var(--color-default);
 }
 
@@ -45,4 +47,8 @@ a:hover {
 img {
   width: 100%;
   vertical-align: top;
-} /*# sourceMappingURL=common.css.map */
+}
+
+p {
+  word-break: break-all;
+}/*# sourceMappingURL=common.css.map */
